# llm-inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  download_onnxruntime.sh  exporter.py  onnx_inference.cpp  onnx_inference.py  quick_test.sh  requirements.txt  run_gpu_inference.sh  setup.py  test_inference.sh  todo.md
configs/: config.example.json  launch.json
docs/: BUILD.md  CONTRIBUTING.md  FIXES_APPLIED.md
examples/: test_onnx_model.py
scripts/: quick_test.sh  run_gpu_inference.sh  run_inference.sh  setup_gpu_env.sh  test_inference.sh
src/: __init__.py  explore_qwen_wrapper.py  exporter.py  onnx_inference.cpp  onnx_inference.py  onnx_inference_fast.cpp  onnx_inference_optimized.cpp  onnx_inference_profiled.cpp  onnx_inference_ultra.cpp  qwen-exporter-v3-working.py  qwen_exporter_v1.py  qwen_exporter_v2.py  test_bfloat.py
test/: test1.json
tokenizer_test_proj/: CMakeLists.txt  tokenizer_test.cpp
